--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div></div>
       <div>
         <label class="card_input-label" for="frmCCNum">Card Number</label>
-        <input type="tel" class="card_input" name="cardnumber" id="frmCCNum" required autocomplete="cc-number"
-               placeholder="XXXX XXXX XXXX XXXX" maxlength="16">
+        <input type="text" class="card_input" name="cardnumber" id="frmCCNum" required autocomplete="cc-number"
+               placeholder="XXXX XXXX XXXX XXXX" maxlength="20">
         <div class="card_username-wrapper">
           <span class="card_username">Maksym Nesterov</span>
         </div>
