--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="card_right">
       <div class="card_logo_wrapper">
-        <img class="card_logo" id="card_logo_id" src="mastercard_logo.svg" alt="">
+        <img class="card_logo" id="card_logo_id" src="" alt="">
       </div>
 
       <div>
