--- a/index.html
+++ b/index.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-<form id="card_form">
-  <div class="card_wrapper">
-    <div class="card_left">
-      <div></div>
-      <div>
-        <label class="card_input-label" for="frmCCNum">Card Number</label>
-        <input type="text" class="card_input" name="cardnumber" id="frmCCNum" required autocomplete="cc-number"
-               placeholder="XXXX XXXX XXXX XXXX" maxlength="20">
-        <div class="card_username-wrapper">
-          <span class="card_username">Maksym Nesterov</span>
-        </div>
-      </div>
-    </div>
-    <div class="card_right">
-      <div class="card_logo_wrapper">
-        <img class="card_logo" id="card_logo_id" src="" alt="">
-      </div>
+<div class="layout-container">
+	<img src="assets/circles_bg.svg" alt="" class="layout-bg">
 
-      <div>
-        <label class="card_input-label" for="frmCCExp">Expiry Date</label>
-        <div class="expiry_date">
-          <input type="tel" class="card_input" maxlength="2" name="ccmonth" required placeholder="MM" id="frmCCExp"
-                 autocomplete="cc-exp-month"> /
-          <input type="tel" class="card_input card_input_year" maxlength="2" name="ccyear" required placeholder="YY"
-                 autocomplete="cc-exp-year">
-        </div>
+	<div class="layout-head">
+		<img src="assets/cgift_logo.svg" class="layout-logo" alt="">
+	</div>
 
-        <label class="card_input-label" for="frmCCCVC">CVV</label>
-        <input class="card_input" type="password" name="cvc" id="frmCCCVC" required autocomplete="cc-csc"
-               placeholder="***" maxlength="3" pattern="[0-9]"
-               inputmode="numeric">
-      </div>
-    </div>
-  </div>
-</form>
+	<div class="layout-content">
+		<div class="paper-root">
+			<h1 class="paper-title">Transaction amount: <span class="span-success">5 EUR</span></h1>
+
+			<form class="card_form" id="card_form">
+				<div class="card_wrapper">
+					<div class="card_left">
+						<div></div>
+						<div>
+							<label class="card_input-label" for="frmCCNum">Card Number</label>
+							<input type="text" class="card_input" name="cardnumber" id="frmCCNum" required autocomplete="cc-number"
+							       placeholder="XXXX XXXX XXXX XXXX" maxlength="20">
+							<div class="card_username-wrapper">
+								<span class="card_username">Maksym Nesterov</span>
+							</div>
+						</div>
+					</div>
+					<div class="card_right">
+						<div class="card_logo_wrapper">
+							<img class="card_logo" id="card_logo_id" src="" alt="">
+						</div>
+
+						<div>
+							<label class="card_input-label" for="frmCCExp">Expiry Date</label>
+							<div class="expiry_date">
+								<input type="tel" class="card_input" maxlength="2" name="ccmonth" required placeholder="MM"
+								       id="frmCCExp"
+								       autocomplete="cc-exp-month"> /
+								<input type="tel" class="card_input card_input_year" maxlength="2" name="ccyear" required
+								       placeholder="YY"
+								       autocomplete="cc-exp-year">
+							</div>
+
+							<label class="card_input-label" for="frmCCCVC">CVV</label>
+							<input class="card_input" type="password" name="cvc" id="frmCCCVC" required autocomplete="cc-csc"
+							       placeholder="***" maxlength="3" pattern="[0-9]"
+							       inputmode="numeric">
+						</div>
+					</div>
+				</div>
+				<button class="card_button" type="submit">Pay</button>
+			</form>
+
+			<a href="/" class="link-cancel">Cancel and take me back</a>
+			<div class="paper-root__bg-elem"></div>
+		</div>
+	</div>
+
+</div>
 <script src="index.js"></script>
 </body>
 </html>
