--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>CGift Payment</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +26,14 @@
 						<div></div>
 						<div>
 							<label class="card_input-label" for="frmCCNum">Card Number</label>
-							<input type="text" class="card_input" name="cardnumber" id="frmCCNum" required autocomplete="cc-number"
-							       placeholder="XXXX XXXX XXXX XXXX" maxlength="20">
+							<input type="text"
+							       id="frmCCNum"
+							       class="card_input"
+							       name="cardnumber"
+							       placeholder="XXXX XXXX XXXX XXXX"
+							       autocomplete="cc-number"
+							       maxlength="20"
+							       required>
 							<div class="card_username-wrapper">
 								<span class="card_username">Maksym Nesterov</span>
 							</div>
@@ -38,24 +45,48 @@
 						</div>
 
 						<div>
-							<label class="card_input-label" for="frmCCExp">Expiry Date</label>
-							<div class="expiry_date">
-								<input type="number" class="card_input" maxlength="2" pattern="\d+" step="1" max="12" min="1" name="ccmonth" required placeholder="MM"
-								       id="frmCCExp"
-								       autocomplete="cc-exp-month"> /
-								<input type="number" class="card_input card_input_year" pattern="\d+" step="1" max="99" min="0" maxlength="2" name="ccyear" required
+							<label class="card_input-label" for="frmCCMonth">Expiry Date</label>
+							<div class="expiry_date card_input">
+								<input type="tel"
+								       id="frmCCMonth"
+								       class="card_input"
+								       name="ccmonth"
+								       placeholder="MM"
+								       autocomplete="cc-exp-month"
+								       maxlength="2"
+								       step="1"
+								       max="12"
+								       min="1"
+								       required />
+								<span>/</span>
+								<input type="tel"
+								       id="frmCCYear"
+								       class="card_input card_input_year"
+								       name="ccyear"
 								       placeholder="YY"
-								       autocomplete="cc-exp-year">
+								       autocomplete="cc-exp-year"
+								       maxlength="2"
+								       step="1"
+								       max="99"
+								       min="0"
+								       required />
 							</div>
 
-							<label class="card_input-label" for="frmCCCVC">CVV</label>
-							<input class="card_input" type="password" name="cvc" id="frmCCCVC" required autocomplete="cc-csc"
-							       placeholder="***" maxlength="3" pattern="^[0-9]{3}$"
-							       inputmode="numeric">
+							<label class="card_input-label" for="frmCCCsc">CVV</label>
+							<input type="password"
+							       id="frmCCCsc"
+							       class="card_input"
+							       name="csc"
+							       placeholder="***"
+							       autocomplete="cc-csc"
+							       maxlength="3"
+							       minlength="3"
+							       inputmode="numeric"
+							       required>
 						</div>
 					</div>
 				</div>
-				<button class="card_button" type="submit">Pay</button>
+				<button class="card_button" id="frmCCBtn" type="submit">Pay</button>
 			</form>
 
 			<a href="/" class="link-cancel">Cancel and take me back</a>
